styles.css
.html{
    overflow-x: hidden;
    -webkit-overflow-scrolling: touch;
    box-sizing: border-box;
}

body {
    background: rgb(47, 158, 248);
    color: rgb(0, 0, 0);
    font-family: 'Courier New', monospace;
    letter-spacing: 0px;
    box-sizing: border-box;
    margin:0;
    padding:0;
    height: 100vh;
    overflow-x: hidden;
}
a{
    text-decoration: none;
    color:black;
}
h1{
    font-size: 40px;
    margin: 0;
}
h2{
    margin-top: 0;
    padding-top: 10px;
    font-size:30px;
}
h3{
    padding-left: 100px;
    padding-right: 100px;
    padding-bottom: 50px;
    font-family: Verdana, sans-serif;
    margin:0;
    z-index: 999;
}
h4{
    font-family: Verdana, sans-serif;
    z-index: 9999;
}

.head{
    background-color: rgb(47, 158, 248);
    height: 100vh;
    position: relative;
}
#intro-text{
    transform: translateY(50vh);
    text-align: center;
}

.clouds
{
    position: absolute;    
    top: 40vh;                
    width:100%;                   
    display: flex;                  
    justify-content: center;         
    align-items: center;             
}
#cloud1{
    position: absolute;
    top: 0;                   
    right: 0;                  
    animation: cloud1 2s linear forwards;
}
#cloud2{
    position: absolute;
    top: 0;                   
    left: 0;                  
    animation: cloud2 2s linear forwards;
}
#cloud3{
    position: absolute;
    top: 0;                   
    left: 0;                  
    animation: cloud3 10s linear infinite;
}
#cloud4{
    transform: translateY(65vh);
    position:absolute;
    animation: cloud4 10s linear infinite;
}
@keyframes cloud1{
    0%{
        right: 50%;
        opacity: 1;
    }
    100%
    {
        right: 100%;
        opacity:0;
    }
}
@keyframes cloud2{
    0%{
        left: 50%;
        opacity:1;
    }
    100%
    {
        left: 100%;
        opacity: 0;
    }
}
@keyframes cloud3{
    0%{
        left: 0;
        opacity:0;
    }
    10%{
        opacity:0.5;
    }
    25%{
        opacity: 1;
    }
    100%
    {
        left: 100%;
        opacity: 0;
    }
}
@keyframes cloud4{
    0%{
        right: 0;
        opacity:0;
    }
    10%{
        opacity:0.5;
    }
    25%{
        opacity: 1;
    }
    100%
    {
        right: 100%;
        opacity: 0;
    }
}
.projects{
    align-items: center;
    justify-content: center;
    text-align: center;
}
.banner{
    background-color: antiquewhite;
    width:80%;
    display:block;
    margin:auto
}
.airplane-banner{
    position:relative;
    opacity: 0;
    transform: translateY(400px);
    transition: all 0.7s ease-out;
}
.airplane-banner.visible{
    opacity:1;
    transform: translateY(-250px);
}
#airplane.visible{
    animation: plane 1s linear 0.5s forwards;
}
@keyframes plane{
    0%{
        opacity:1;
    }
    100%
    {
        transform: translateY(-500px);
        opacity: 0;
    }
}

#beach-image{
 
    margin-left:auto;          /* Align to the right edge */

    display:block;
    z-index: -1;
}
.experience{
    padding-left: 10vw;
    text-align: left;
    color:rgb(255, 255, 255);
    padding-right:50px;
    z-index: 999;
}

section{
    position: relative;
    width: 100%;
    height: 15vh;
    overflow:hidden;
}
section .wave{
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height:100px;
    background: url('wave.png');
    background-size: 1000px 100px;
}

section .wave.wave1{
    animation: animate 30s linear infinite;
    z-index: 1000;
    opacity: 1;
    animation-delay: 0s;
    bottom: 0;
}
section .wave.wave2{
    animation: animate2 15s linear infinite;
    z-index: 999;
    opacity: 0.7;
    animation-delay: -5s;
    bottom: 10px;
}
section .wave.wave3{
    animation: animate 30s linear infinite;
    z-index: 998;
    opacity: 0.5;
    animation-delay: -2s;
    bottom: 15;
}
section .wave.wave4{
    animation: animate2 5s linear infinite;
    z-index: 997;
    opacity: 0.9;
    animation-delay: -5s;
    bottom: 20;
}
@keyframes animate
{
    0%
    {
        background-position-x: 0;
    }
    100%
    {
        background-position-x: 1000px;
    }
}
@keyframes animate2
{
    0%
    {
        background-position-x: 0;
    }
    100%
    {
        background-position-x: -1000px;
    }
}
.skills{
   margin-top:-100px;
   position: relative;
}
.skill-section{
    background-color: rgb(38, 221, 221);
    z-index: 9999;
}
#blue-fish{
    position: absolute;
    animation: blueFish 10s linear infinite;
    opacity: 0.5; 
    z-index: 1;
}
#yellow-fish{
    position: absolute;
    animation: yellowFish 12s linear 1s infinite;
    opacity:0.5;
    z-index: 1;
}
#skills-header{
    margin:0;
}
.about{
    background-color: rgb(38, 221, 221);
}
.about-me{
    padding-left: 10%;
    padding-right:10%;
    text-align: left;
}
.connect
{
    background-color: rgb(228, 216, 147);
}
#varsity-photo{
    animation: imageBob 5s infinite;
}
@keyframes blueFish
{
    0%{
       left:0%;
       bottom: 0%;
    }
    100%{
        left: 100%;
        bottom: 40%
    }
}
@keyframes yellowFish
{
    0%{
       right:0%;
       bottom: 0%;
    }
    100%{
        right: 100%;
        bottom: 20%
    }
}
@keyframes imageBob{
    0%{
        transform: translateY(0px);
    }
    50%{
        transform: translateY(-10px);
    }
    100%{
        transform:translateY(0px);
    }
}
.name-link{ /*name with linked in link beside it*/
    display: flex;
    align-items: center;
    gap: 20px;
    justify-content: center;
}
#linkedin-logo
{
    transform: translateY(-6px);
}
@media(max-width:1300px)
{
    h3{
        padding-left: 50px;
        padding-right:50px;
    }
}  
@media (max-width: 1000px)
{
    h3{
        padding-left: 200px;
        padding-right:200px;
    }
    #beach-image{
        max-width: 500px;
    }
}
@media (max-width: 900px)
{
    .project-photo{
        max-width: 400px;
    }
    h3{
        padding-left: 50px;
        padding-right: 50px;
    }
}
@media (max-width: 800px)
{
    .experience{
        padding-left:5vw;
    }
}

@media (max-width: 550px)
{
    .project-photo{
        max-width: 256px;
    }
    h3{
        padding-left: 10px;
        padding-right: 10px;
    }
    #beach-image{
        max-width: 300px;
        float: none; /* Prevent any floating behavior */
        clear: both; /* Clear any floats from earlier elements */
    }

}

